--- a/IdeaSlotApp/UI/Storyboard/CategoryRegistFormView.xib
+++ b/IdeaSlotApp/UI/Storyboard/CategoryRegistFormView.xib
@@ -13,64 +13,62 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" restorationIdentifier="CategoryRegistForm" id="iN0-l3-epB" customClass="CategoryRegistFormView" customModule="IdeaSlotApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="235" height="161"/>
+            <rect key="frame" x="0.0" y="0.0" width="400" height="180"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="d06-mZ-fO6">
-                    <rect key="frame" x="0.0" y="0.0" width="235" height="161"/>
+                    <rect key="frame" x="0.0" y="0.0" width="400" height="180"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rVp-9q-eXd">
+                            <rect key="frame" x="380" y="5" width="20" height="20"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <state key="normal" title="Button"/>
+                            <connections>
+                                <action selector="CloseAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="5UO-nF-KaO"/>
+                            </connections>
+                        </button>
+                        <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="b3Y-xB-bIs">
+                            <rect key="frame" x="25" y="65" width="350" height="50"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <nil key="textColor"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </textField>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Regist Category" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dqh-2D-VY5">
+                            <rect key="frame" x="5" y="8" width="140" height="25"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Category Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" highlighted="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VZo-vv-VS3">
+                            <rect key="frame" x="30" y="41" width="138" height="20"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2IP-ef-nDl">
+                            <rect key="frame" x="25" y="142" width="350" height="30"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <state key="normal" title="Button"/>
+                            <connections>
+                                <action selector="RegistAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="I8x-l5-Xs0"/>
+                            </connections>
+                        </button>
+                    </subviews>
                 </view>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Regist Category" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dqh-2D-VY5">
-                    <rect key="frame" x="16" y="20" width="110" height="18"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="18" id="VwU-bI-Tf9"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="b3Y-xB-bIs">
-                    <rect key="frame" x="16" y="65.5" width="199" height="30"/>
-                    <nil key="textColor"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits"/>
-                </textField>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2IP-ef-nDl">
-                    <rect key="frame" x="16" y="110.5" width="199" height="30.5"/>
-                    <state key="normal" title="Button"/>
-                    <connections>
-                        <action selector="RegistAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="I8x-l5-Xs0"/>
-                    </connections>
-                </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VZo-vv-VS3">
-                    <rect key="frame" x="17" y="48" width="25" height="14.5"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <nil key="highlightedColor"/>
-                </label>
             </subviews>
-            <constraints>
-                <constraint firstItem="VZo-vv-VS3" firstAttribute="top" secondItem="dqh-2D-VY5" secondAttribute="bottom" constant="10" id="4dj-Ra-HU4"/>
-                <constraint firstItem="2IP-ef-nDl" firstAttribute="top" secondItem="b3Y-xB-bIs" secondAttribute="bottom" constant="15" id="5C4-Ad-mTg"/>
-                <constraint firstAttribute="bottom" secondItem="2IP-ef-nDl" secondAttribute="bottom" constant="20" symbolic="YES" id="E6t-SC-WWR"/>
-                <constraint firstItem="b3Y-xB-bIs" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="IQc-v6-Dae"/>
-                <constraint firstItem="b3Y-xB-bIs" firstAttribute="leading" secondItem="2IP-ef-nDl" secondAttribute="leading" id="J7S-fB-Fjj"/>
-                <constraint firstItem="VZo-vv-VS3" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="17" id="L6R-iw-7qj"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="b3Y-xB-bIs" secondAttribute="trailing" constant="20" id="QvL-cJ-5Tg"/>
-                <constraint firstItem="dqh-2D-VY5" firstAttribute="leading" secondItem="b3Y-xB-bIs" secondAttribute="leading" id="SMI-61-EPk"/>
-                <constraint firstItem="b3Y-xB-bIs" firstAttribute="top" secondItem="VZo-vv-VS3" secondAttribute="bottom" constant="3" id="VwR-Ff-h9Q"/>
-                <constraint firstItem="b3Y-xB-bIs" firstAttribute="trailing" secondItem="2IP-ef-nDl" secondAttribute="trailing" id="hEK-Qu-dAO"/>
-                <constraint firstItem="dqh-2D-VY5" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" symbolic="YES" id="osE-4h-Q7l"/>
-                <constraint firstItem="dqh-2D-VY5" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leadingMargin" id="ssj-YE-sUg"/>
-            </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
+                <outlet property="closeButton" destination="rVp-9q-eXd" id="8tQ-u1-xaS"/>
                 <outlet property="containerView" destination="d06-mZ-fO6" id="Qud-lr-6eP"/>
                 <outlet property="registButton" destination="2IP-ef-nDl" id="wzh-DR-OLx"/>
                 <outlet property="textFrom" destination="b3Y-xB-bIs" id="G9f-61-Qdw"/>
             </connections>
-            <point key="canvasLocation" x="111.2" y="-99.400299850074973"/>
+            <point key="canvasLocation" x="243.19999999999999" y="-90.854572713643179"/>
         </view>
     </objects>
 </document>
