--- a/IdeaSlotApp/UI/Storyboard/Category/CategoryRegistFormView.xib
+++ b/IdeaSlotApp/UI/Storyboard/Category/CategoryRegistFormView.xib
@@ -13,68 +13,62 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" restorationIdentifier="CategoryRegistForm" id="iN0-l3-epB" customClass="CategoryRegistFormView" customModule="IdeaSlotApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="400" height="180"/>
+            <rect key="frame" x="0.0" y="0.0" width="400" height="150"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d06-mZ-fO6">
-                    <rect key="frame" x="0.0" y="0.0" width="400" height="180"/>
+                    <rect key="frame" x="0.0" y="0.0" width="400" height="150"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rVp-9q-eXd">
                             <rect key="frame" x="355" y="8" width="20" height="20"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="20" id="4hu-fU-hrH"/>
-                                <constraint firstAttribute="height" constant="20" id="NkF-Nh-Nyv"/>
+                                <constraint firstAttribute="width" constant="20" id="7Q7-TX-aWQ"/>
+                                <constraint firstAttribute="height" constant="20" id="ZBe-dF-9rl"/>
                             </constraints>
                             <state key="normal" title="Button"/>
                             <connections>
                                 <action selector="CloseAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="5UO-nF-KaO"/>
                             </connections>
                         </button>
-                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="b3Y-xB-bIs">
-                            <rect key="frame" x="25" y="65" width="350" height="50"/>
-                            <nil key="textColor"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                            <textInputTraits key="textInputTraits"/>
-                        </textField>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2IP-ef-nDl">
-                            <rect key="frame" x="25" y="142" width="350" height="30"/>
+                            <rect key="frame" x="112.5" y="112" width="175" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="175" id="HE2-8g-eNM"/>
+                                <constraint firstAttribute="height" constant="30" id="obF-sk-HK4"/>
+                            </constraints>
                             <state key="normal" title="Button"/>
                             <connections>
                                 <action selector="RegistAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="I8x-l5-Xs0"/>
                             </connections>
                         </button>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" highlighted="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VZo-vv-VS3">
-                            <rect key="frame" x="25" y="41" width="138" height="20"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="20" id="Tie-16-lpE"/>
-                                <constraint firstAttribute="width" constant="138" id="oNL-Wk-8FR"/>
-                            </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <nil key="highlightedColor"/>
-                        </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Regist Category" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dqh-2D-VY5">
-                            <rect key="frame" x="25" y="8" width="140" height="25"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                            <rect key="frame" x="25" y="8" width="180" height="38"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="180" id="aiV-XY-yRr"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="25"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="b3Y-xB-bIs">
+                            <rect key="frame" x="25" y="60" width="350" height="30"/>
+                            <nil key="textColor"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </textField>
                     </subviews>
                     <constraints>
-                        <constraint firstItem="dqh-2D-VY5" firstAttribute="leading" secondItem="VZo-vv-VS3" secondAttribute="leading" id="27G-Uv-d5Q"/>
-                        <constraint firstItem="VZo-vv-VS3" firstAttribute="leading" secondItem="b3Y-xB-bIs" secondAttribute="leading" id="4Pt-ut-YaZ"/>
-                        <constraint firstItem="b3Y-xB-bIs" firstAttribute="leading" secondItem="2IP-ef-nDl" secondAttribute="leading" id="6Eu-Qs-C8U"/>
-                        <constraint firstItem="b3Y-xB-bIs" firstAttribute="trailing" secondItem="2IP-ef-nDl" secondAttribute="trailing" id="9uq-51-ZG5"/>
-                        <constraint firstItem="rVp-9q-eXd" firstAttribute="trailing" secondItem="b3Y-xB-bIs" secondAttribute="trailing" id="FRK-2E-s8K"/>
-                        <constraint firstItem="b3Y-xB-bIs" firstAttribute="centerY" secondItem="d06-mZ-fO6" secondAttribute="centerY" id="PtX-P7-o9l"/>
-                        <constraint firstItem="dqh-2D-VY5" firstAttribute="top" secondItem="rVp-9q-eXd" secondAttribute="top" id="SoO-ml-vQT"/>
-                        <constraint firstItem="dqh-2D-VY5" firstAttribute="leading" secondItem="d06-mZ-fO6" secondAttribute="leading" constant="25" id="a1j-0i-ZBj"/>
-                        <constraint firstItem="b3Y-xB-bIs" firstAttribute="centerX" secondItem="d06-mZ-fO6" secondAttribute="centerX" id="aqd-h2-g2o"/>
-                        <constraint firstItem="VZo-vv-VS3" firstAttribute="top" secondItem="dqh-2D-VY5" secondAttribute="bottom" constant="8" symbolic="YES" id="kgb-8d-YV6"/>
-                        <constraint firstItem="2IP-ef-nDl" firstAttribute="top" secondItem="b3Y-xB-bIs" secondAttribute="bottom" constant="27" id="ubt-nQ-NtS"/>
-                        <constraint firstItem="2IP-ef-nDl" firstAttribute="bottom" secondItem="d06-mZ-fO6" secondAttribute="bottomMargin" id="vOI-E9-bBH"/>
-                        <constraint firstItem="b3Y-xB-bIs" firstAttribute="top" secondItem="VZo-vv-VS3" secondAttribute="bottom" constant="4" id="wUq-zO-paP"/>
-                        <constraint firstItem="dqh-2D-VY5" firstAttribute="top" secondItem="d06-mZ-fO6" secondAttribute="topMargin" id="xc4-us-HoX"/>
+                        <constraint firstItem="dqh-2D-VY5" firstAttribute="top" secondItem="d06-mZ-fO6" secondAttribute="topMargin" id="6eX-uw-JwF"/>
+                        <constraint firstItem="dqh-2D-VY5" firstAttribute="leading" secondItem="d06-mZ-fO6" secondAttribute="leading" constant="25" id="6zH-d0-6yq"/>
+                        <constraint firstItem="dqh-2D-VY5" firstAttribute="leading" secondItem="b3Y-xB-bIs" secondAttribute="leading" id="Cvc-3a-4tf"/>
+                        <constraint firstAttribute="bottom" secondItem="2IP-ef-nDl" secondAttribute="bottom" constant="8" id="DhX-Ad-XqI"/>
+                        <constraint firstItem="b3Y-xB-bIs" firstAttribute="centerX" secondItem="d06-mZ-fO6" secondAttribute="centerX" id="OWK-Ww-FBA"/>
+                        <constraint firstItem="b3Y-xB-bIs" firstAttribute="top" secondItem="rVp-9q-eXd" secondAttribute="bottom" constant="32" id="Qkw-oz-p4f"/>
+                        <constraint firstItem="b3Y-xB-bIs" firstAttribute="top" secondItem="dqh-2D-VY5" secondAttribute="bottom" constant="14" id="Sjr-Dj-Fcm"/>
+                        <constraint firstItem="dqh-2D-VY5" firstAttribute="top" secondItem="rVp-9q-eXd" secondAttribute="top" id="X95-8f-WfQ"/>
+                        <constraint firstItem="rVp-9q-eXd" firstAttribute="trailing" secondItem="b3Y-xB-bIs" secondAttribute="trailing" id="bPL-2q-slw"/>
+                        <constraint firstItem="b3Y-xB-bIs" firstAttribute="centerX" secondItem="2IP-ef-nDl" secondAttribute="centerX" id="fd7-jd-ADZ"/>
+                        <constraint firstItem="2IP-ef-nDl" firstAttribute="top" secondItem="b3Y-xB-bIs" secondAttribute="bottom" constant="22" id="w7j-Cv-UXB"/>
                     </constraints>
                 </view>
             </subviews>
@@ -92,7 +86,7 @@
                 <outlet property="registButton" destination="2IP-ef-nDl" id="wzh-DR-OLx"/>
                 <outlet property="textFrom" destination="b3Y-xB-bIs" id="G9f-61-Qdw"/>
             </connections>
-            <point key="canvasLocation" x="243.19999999999999" y="-90.854572713643179"/>
+            <point key="canvasLocation" x="243.19999999999999" y="-104.34782608695653"/>
         </view>
     </objects>
 </document>
