--- a/IdeaSlotApp/UI/Storyboard/Category/CategoryDeleteAlertView.xib
+++ b/IdeaSlotApp/UI/Storyboard/Category/CategoryDeleteAlertView.xib
@@ -12,13 +12,71 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="409" height="433"/>
+        <view contentMode="scaleToFill" restorationIdentifier="CategoryDeleteAlert" id="iN0-l3-epB" customClass="CategoryDeleteAlertView" customModule="IdeaSlotApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="409" height="151"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="h7z-Fd-EJ3">
-                    <rect key="frame" x="0.0" y="0.0" width="409" height="433"/>
+                    <rect key="frame" x="0.0" y="0.0" width="409" height="151"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Delete Category" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wft-dC-XS4">
+                            <rect key="frame" x="24" y="8" width="182" height="38"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aBd-lN-izr">
+                            <rect key="frame" x="40" y="113" width="150" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="150" id="8ur-Wz-Uzg"/>
+                            </constraints>
+                            <state key="normal" title="Button"/>
+                            <connections>
+                                <action selector="canselButtonAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="dKR-HB-FhE"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="prq-1u-OZN">
+                            <rect key="frame" x="227" y="113" width="150" height="30"/>
+                            <state key="normal" title="Button"/>
+                            <connections>
+                                <action selector="deleteButtonAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="pvc-0f-Zdi"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DIi-mT-PKT">
+                            <rect key="frame" x="381" y="17" width="20" height="20"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="20" id="9rC-RS-QT6"/>
+                            </constraints>
+                            <state key="normal" title="Button"/>
+                            <connections>
+                                <action selector="closeButtonAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="jTs-iS-Kfz"/>
+                            </connections>
+                        </button>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p5S-Xr-mQe">
+                            <rect key="frame" x="40" y="54" width="311" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstItem="aBd-lN-izr" firstAttribute="bottom" secondItem="h7z-Fd-EJ3" secondAttribute="bottomMargin" id="6vK-u1-W1D"/>
+                        <constraint firstItem="Wft-dC-XS4" firstAttribute="centerX" secondItem="aBd-lN-izr" secondAttribute="centerX" id="AiU-L3-Fta"/>
+                        <constraint firstItem="p5S-Xr-mQe" firstAttribute="leading" secondItem="aBd-lN-izr" secondAttribute="leading" id="Bfa-K9-pZZ"/>
+                        <constraint firstAttribute="trailing" secondItem="p5S-Xr-mQe" secondAttribute="trailing" constant="58" id="Nb7-mN-QPg"/>
+                        <constraint firstAttribute="trailing" secondItem="prq-1u-OZN" secondAttribute="trailing" constant="32" id="R2o-Bx-OwL"/>
+                        <constraint firstItem="p5S-Xr-mQe" firstAttribute="leading" secondItem="h7z-Fd-EJ3" secondAttribute="leading" constant="40" id="T4f-jP-E8y"/>
+                        <constraint firstItem="p5S-Xr-mQe" firstAttribute="top" secondItem="Wft-dC-XS4" secondAttribute="bottom" constant="8" symbolic="YES" id="TwV-ZU-ZhP"/>
+                        <constraint firstItem="DIi-mT-PKT" firstAttribute="trailing" secondItem="h7z-Fd-EJ3" secondAttribute="trailingMargin" id="dlE-2o-A2x"/>
+                        <constraint firstItem="DIi-mT-PKT" firstAttribute="top" secondItem="h7z-Fd-EJ3" secondAttribute="top" constant="17" id="eBJ-kg-0Xp"/>
+                        <constraint firstItem="prq-1u-OZN" firstAttribute="leading" secondItem="aBd-lN-izr" secondAttribute="trailing" constant="37" id="eu2-Hp-Pev"/>
+                        <constraint firstItem="aBd-lN-izr" firstAttribute="top" secondItem="p5S-Xr-mQe" secondAttribute="bottom" constant="38" id="kTe-0a-8cb"/>
+                        <constraint firstItem="Wft-dC-XS4" firstAttribute="leading" secondItem="h7z-Fd-EJ3" secondAttribute="leading" constant="24" id="kpC-qN-wqJ"/>
+                        <constraint firstItem="aBd-lN-izr" firstAttribute="baseline" secondItem="prq-1u-OZN" secondAttribute="baseline" id="pfj-vR-dcQ"/>
+                        <constraint firstItem="Wft-dC-XS4" firstAttribute="top" secondItem="h7z-Fd-EJ3" secondAttribute="topMargin" id="weC-Oc-Tzg"/>
+                        <constraint firstItem="Wft-dC-XS4" firstAttribute="centerY" secondItem="DIi-mT-PKT" secondAttribute="centerY" id="wi7-Pv-sGY"/>
+                    </constraints>
                 </view>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -30,7 +88,14 @@
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <point key="canvasLocation" x="165.59999999999999" y="8.5457271364317844"/>
+            <connections>
+                <outlet property="canselButton" destination="aBd-lN-izr" id="33T-Pm-uew"/>
+                <outlet property="closeButton" destination="DIi-mT-PKT" id="gE6-ef-3EX"/>
+                <outlet property="containerView" destination="h7z-Fd-EJ3" id="Q2S-tl-fR2"/>
+                <outlet property="deleteButton" destination="prq-1u-OZN" id="GL4-Ce-Gac"/>
+                <outlet property="deleteDescription" destination="p5S-Xr-mQe" id="Te0-L6-sHv"/>
+            </connections>
+            <point key="canvasLocation" x="165.59999999999999" y="-118.29085457271366"/>
         </view>
     </objects>
 </document>
