--- a/IdeaSlotApp/UI/Storyboard/Category/CategoryDeleteAlertView.xib
+++ b/IdeaSlotApp/UI/Storyboard/Category/CategoryDeleteAlertView.xib
@@ -13,11 +13,11 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" restorationIdentifier="CategoryDeleteAlert" id="iN0-l3-epB" customClass="CategoryDeleteAlertView" customModule="IdeaSlotApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="409" height="151"/>
+            <rect key="frame" x="0.0" y="0.0" width="409" height="180"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="h7z-Fd-EJ3">
-                    <rect key="frame" x="0.0" y="0.0" width="409" height="151"/>
+                <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="h7z-Fd-EJ3">
+                    <rect key="frame" x="0.0" y="0.0" width="409" height="180"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Delete Category" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wft-dC-XS4">
                             <rect key="frame" x="24" y="8" width="182" height="38"/>
@@ -25,18 +25,8 @@
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aBd-lN-izr">
-                            <rect key="frame" x="40" y="113" width="150" height="30"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="150" id="zEI-HI-iSg"/>
-                            </constraints>
-                            <state key="normal" title="Button"/>
-                            <connections>
-                                <action selector="canselButtonAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="dKR-HB-FhE"/>
-                            </connections>
-                        </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="prq-1u-OZN">
-                            <rect key="frame" x="227" y="113" width="150" height="30"/>
+                            <rect key="frame" x="227" y="130" width="150" height="30"/>
                             <state key="normal" title="Button"/>
                             <connections>
                                 <action selector="deleteButtonAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="pvc-0f-Zdi"/>
@@ -49,42 +39,48 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nnV-rM-4Rr">
-                            <rect key="frame" x="381" y="17" width="20" height="25"/>
+                            <rect key="frame" x="381" y="17" width="20" height="20"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="20" id="h73-Zr-JUy"/>
+                                <constraint firstAttribute="width" constant="20" id="fnP-kf-FcC"/>
                             </constraints>
                             <state key="normal" title="Button"/>
                             <connections>
                                 <action selector="closeButtonAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="hgb-HJ-s1R"/>
                             </connections>
                         </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aBd-lN-izr">
+                            <rect key="frame" x="40" y="130" width="150" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="150" id="ZOM-wf-f28"/>
+                            </constraints>
+                            <state key="normal" title="Button"/>
+                            <connections>
+                                <action selector="canselButtonAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="dKR-HB-FhE"/>
+                            </connections>
+                        </button>
                     </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstItem="p5S-Xr-mQe" firstAttribute="leading" secondItem="h7z-Fd-EJ3" secondAttribute="leading" constant="40" id="5qz-Hc-qMP"/>
-                        <constraint firstItem="p5S-Xr-mQe" firstAttribute="top" secondItem="Wft-dC-XS4" secondAttribute="bottom" constant="8" symbolic="YES" id="IPF-Qp-MDh"/>
-                        <constraint firstItem="Wft-dC-XS4" firstAttribute="top" secondItem="h7z-Fd-EJ3" secondAttribute="topMargin" id="Irc-vp-17Q"/>
-                        <constraint firstItem="Wft-dC-XS4" firstAttribute="leading" secondItem="h7z-Fd-EJ3" secondAttribute="leading" constant="24" id="KFl-J5-Dcy"/>
-                        <constraint firstItem="aBd-lN-izr" firstAttribute="bottom" secondItem="h7z-Fd-EJ3" secondAttribute="bottomMargin" id="L59-FH-Zgv"/>
-                        <constraint firstAttribute="trailing" secondItem="prq-1u-OZN" secondAttribute="trailing" constant="32" id="Lu4-Ee-I9S"/>
-                        <constraint firstItem="Wft-dC-XS4" firstAttribute="centerX" secondItem="aBd-lN-izr" secondAttribute="centerX" id="Mje-qX-KEc"/>
-                        <constraint firstItem="prq-1u-OZN" firstAttribute="leading" secondItem="aBd-lN-izr" secondAttribute="trailing" constant="37" id="SwP-bN-Pgn"/>
-                        <constraint firstItem="p5S-Xr-mQe" firstAttribute="leading" secondItem="aBd-lN-izr" secondAttribute="leading" id="TAa-21-xwC"/>
-                        <constraint firstItem="Wft-dC-XS4" firstAttribute="centerY" secondItem="nnV-rM-4Rr" secondAttribute="centerY" constant="-2.5" id="aRs-u3-IxQ"/>
-                        <constraint firstItem="nnV-rM-4Rr" firstAttribute="trailing" secondItem="h7z-Fd-EJ3" secondAttribute="trailingMargin" id="eMK-ei-SSK"/>
-                        <constraint firstItem="aBd-lN-izr" firstAttribute="top" secondItem="p5S-Xr-mQe" secondAttribute="bottom" constant="38" id="iKn-et-YJe"/>
-                        <constraint firstAttribute="trailing" secondItem="p5S-Xr-mQe" secondAttribute="trailing" constant="58" id="nss-WY-Gp6"/>
-                        <constraint firstItem="nnV-rM-4Rr" firstAttribute="top" secondItem="h7z-Fd-EJ3" secondAttribute="top" constant="17" id="pzV-Eh-1mM"/>
-                        <constraint firstItem="aBd-lN-izr" firstAttribute="baseline" secondItem="prq-1u-OZN" secondAttribute="baseline" id="zpK-Xx-Oft"/>
+                        <constraint firstAttribute="bottom" secondItem="aBd-lN-izr" secondAttribute="bottom" constant="20" id="96c-zI-Wtg"/>
+                        <constraint firstAttribute="width" secondItem="h7z-Fd-EJ3" secondAttribute="height" multiplier="409:180" id="GbH-NT-UuI"/>
+                        <constraint firstItem="Wft-dC-XS4" firstAttribute="leading" secondItem="h7z-Fd-EJ3" secondAttribute="leading" constant="24" id="Guz-HM-RS8"/>
+                        <constraint firstItem="aBd-lN-izr" firstAttribute="baseline" secondItem="prq-1u-OZN" secondAttribute="baseline" id="LDM-Fr-mkT"/>
+                        <constraint firstAttribute="trailing" secondItem="p5S-Xr-mQe" secondAttribute="trailing" constant="58" id="LGt-eq-qgY"/>
+                        <constraint firstItem="aBd-lN-izr" firstAttribute="top" secondItem="p5S-Xr-mQe" secondAttribute="bottom" constant="55" id="RgA-UA-R3a"/>
+                        <constraint firstItem="nnV-rM-4Rr" firstAttribute="top" secondItem="h7z-Fd-EJ3" secondAttribute="top" constant="17" id="UQG-G7-sAA"/>
+                        <constraint firstItem="Wft-dC-XS4" firstAttribute="centerX" secondItem="aBd-lN-izr" secondAttribute="centerX" id="bpD-Kf-zcb"/>
+                        <constraint firstAttribute="trailing" secondItem="prq-1u-OZN" secondAttribute="trailing" constant="32" id="cok-gC-VWr"/>
+                        <constraint firstItem="prq-1u-OZN" firstAttribute="leading" secondItem="aBd-lN-izr" secondAttribute="trailing" constant="37" id="cuK-6z-EdE"/>
+                        <constraint firstItem="nnV-rM-4Rr" firstAttribute="trailing" secondItem="h7z-Fd-EJ3" secondAttribute="trailingMargin" id="cur-OP-3Jm"/>
+                        <constraint firstItem="p5S-Xr-mQe" firstAttribute="leading" secondItem="h7z-Fd-EJ3" secondAttribute="leading" constant="40" id="eA6-Fo-DNA"/>
+                        <constraint firstItem="Wft-dC-XS4" firstAttribute="centerY" secondItem="nnV-rM-4Rr" secondAttribute="centerY" id="hSx-y7-2M3"/>
+                        <constraint firstItem="p5S-Xr-mQe" firstAttribute="leading" secondItem="aBd-lN-izr" secondAttribute="leading" id="nzo-Fs-USq"/>
+                        <constraint firstItem="p5S-Xr-mQe" firstAttribute="top" secondItem="Wft-dC-XS4" secondAttribute="bottom" constant="8" symbolic="YES" id="oKI-jO-bhV"/>
+                        <constraint firstItem="Wft-dC-XS4" firstAttribute="top" secondItem="h7z-Fd-EJ3" secondAttribute="topMargin" id="xIG-RC-aXY"/>
                     </constraints>
                 </view>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="h7z-Fd-EJ3" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Fhn-nj-RSv"/>
-                <constraint firstItem="h7z-Fd-EJ3" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" id="ZWg-Zz-9yM"/>
-                <constraint firstItem="h7z-Fd-EJ3" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="wTQ-Df-cYQ"/>
-                <constraint firstAttribute="trailing" secondItem="h7z-Fd-EJ3" secondAttribute="trailing" id="zaK-vY-ONs"/>
+                <constraint firstItem="h7z-Fd-EJ3" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" id="ieO-VZ-C2U"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
@@ -95,7 +91,7 @@
                 <outlet property="deleteButton" destination="prq-1u-OZN" id="GL4-Ce-Gac"/>
                 <outlet property="deleteDescription" destination="p5S-Xr-mQe" id="Te0-L6-sHv"/>
             </connections>
-            <point key="canvasLocation" x="165.59999999999999" y="-118.29085457271366"/>
+            <point key="canvasLocation" x="165.59999999999999" y="-105.24737631184409"/>
         </view>
     </objects>
 </document>
